# social_media

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
migrations/: env.py
src/: api.py  database.py  main.py  settings.py
src/activity/: models.py  service.py  views.py
src/auth/: enums.py  models.py  schemas.py  service.py  views.py
src/post/: models.py  schemas.py  service.py  views.py
src/profile/: schemas.py  service.py  views.py
